--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         </nav>
 
         <div class="main-header">
-          <h1>Lorem ipsum.</h1>
-          <button>Click</button>
+          <div class="main-header-content">
+            <h1>Go Cold Turkey on The High Line</h1>
+            <button>Click</button>
+          </div>
         </div>
 
         <div class="to-menu">
