Adds hamburger icon and some media queries

--- a/about.html
+++ b/about.html
@@ -45,34 +45,36 @@
     <!--2 columns of text-->
     <div class="row">
         <div class="column">
-    <p> In 1934, the High Line opened to trains. 
-    <br>
-    It ran from 34th Street to St John's Park Terminal, which was located at Spring Street. 
-    <br>
-    It was designed to go through the center of streets, rather than over them, carrying goods to and from the city’s largest industrial district.
-    <br>
-Due to the growing trucking industry, the last train ran on the High Line in 1980, which housed three carloads of frozen turkeys. 
-<br>
-Some property owners lobby for demolition while Peter Obletz challenges these demolition efforts in court.
-<br>
-Friends of the High Line was founded in 1999 by Joshua David and Robert Hammond, who are residents of the neighborhood. They did this to advocate for the High Line's preservation and reuse it as a public open space. </p>
-<p>
-In 2002 the planning began starting with the framework for the preservation. A competition opens, Designing the High Line.
-<br>
-Then in 2004, Friends of the High Line and the City of New York select a design team for the High Line. The selected team is James Corner Field Operations, a landscape architecture firm, Diller Scofidio + Renfro, and Piet Oudolf, planting designer.
-<br>
-Groundbreaking was celebrated in April 2006. Section 1, which consists of West 20th Street to Gansevoort Street, is finally open to the public. Two years later, Section 2, from 20th to 30th Street, is also open to the public.
-<br>
-A final groundbreaking ceremony was celebrated on the High Line at the Rail Yards on September 20, 2012.
-<br>
-The High Line at the Rail Yards in the northernmost section, is the third and final section to open. Friends of the High Line celebrates 15 years of success for the project.</p>
-    </div>
+            <p> 
+                In 1934, the High Line opened to trains. 
+                <br>
+                It ran from 34th Street to St John's Park Terminal, which was located at Spring Street. 
+                <br>
+                It was designed to go through the center of streets, rather than over them, carrying goods to and from the city’s largest industrial district.
+                <br>
+                Due to the growing trucking industry, the last train ran on the High Line in 1980, which housed three carloads of frozen turkeys. 
+                <br>
+                Some property owners lobby for demolition while Peter Obletz challenges these demolition efforts in court.
+                <br>
+                Friends of the High Line was founded in 1999 by Joshua David and Robert Hammond, who are residents of the neighborhood. They did this to advocate for the High Line's preservation and reuse it as a public open space. </p>
+                <p>
+                In 2002 the planning began starting with the framework for the preservation. A competition opens, Designing the High Line.
+                <br>
+                Then in 2004, Friends of the High Line and the City of New York select a design team for the High Line. The selected team is James Corner Field Operations, a landscape architecture firm, Diller Scofidio + Renfro, and Piet Oudolf, planting designer.
+                <br>
+                Groundbreaking was celebrated in April 2006. Section 1, which consists of West 20th Street to Gansevoort Street, is finally open to the public. Two years later, Section 2, from 20th to 30th Street, is also open to the public.
+                <br>
+                A final groundbreaking ceremony was celebrated on the High Line at the Rail Yards on September 20, 2012.
+                <br>
+                The High Line at the Rail Yards in the northernmost section, is the third and final section to open. Friends of the High Line celebrates 15 years of success for the project.
+            </p>
+        </div>
     </div>
     
     <footer>
-<div class="logo">
-<img src="images/logo.png" style="width:250px; height: 250px;">
-</div>
+        <div class="logo">
+            <img src="images/logo.png" style="width:250px; height: 250px;">
+        </div>
         <i class="fab fa-facebook"></i>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-twitter-square"></i>
@@ -83,6 +85,6 @@ The High Line at the Rail Yards in the northernmost section, is the third and fi
         <li class="reservations"><a href="reservations.html">Reservations & Contact Us</a></li>
         </ul>
         Copyright &copy; Cold Turkey Drinks on the Highline 2018
-</footer>    
+    </footer>    
 </body>
 </html>
