--- a/reservations.html
+++ b/reservations.html
@@ -14,8 +14,7 @@
     <!--Header with Navigation-->
     <nav>
         <div class="brand">
-            <img src="#">
-            <!--logo-->
+            <img src="images/logo.png"> <!--logo-->
             <h1>Cold Turkey</h1>
         </div>
         <div class="nav-bar">
@@ -28,7 +27,7 @@
         </div>
     </nav>
     
-<!--header-->
+    <!--header-->
     <header>
         <h1>Lorem ipsum dolor sit amet.</h1>
         <div>
@@ -36,23 +35,23 @@
         </div>
     </header>
 
-<!--Map-->
-<div id="map"></div>
+    <!--Map-->
+    <div id="map"></div>
 
-<!--Reservations-->
-<form>
-    <input type="radio" name="contact">Contact Us
-    <input type="radio" name="reservation"> Make a Reservation
-    <br>
-    <input type="text"name="name"> Name   
-    <input type="text"name="email"> Email 
-    <input type="text"name="phone"> Phone 
-    <input type="text"name="date"> Date 
-    <input type="text"name="time"> Time
-    <input type="text"name="message"> Message 
-</form>
+    <!--Reservations-->
+    <form>
+        <input type="radio" name="contact">Contact Us
+        <input type="radio" name="reservation"> Make a Reservation
+        <br>
+        <input type="text"name="name"> Name   
+        <input type="text"name="email"> Email 
+        <input type="text"name="phone"> Phone 
+        <input type="text"name="date"> Date 
+        <input type="text"name="time"> Time
+        <input type="text"name="message"> Message 
+    </form>
 
-<!--Footer-->
+    <!--Footer-->
     <footer>
         <div class="logo">
             <img src="images/logo.png" style="width:250px; height: 250px;">
