Adds new background to divs. Finalizes design.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
                <a href="about.html"><li>About</li></a>
            </ul>
         </div>
+        <a id="nav-toggle" href="#">&#9776;</a>
     </nav>
+    
     <!--first box with background image and header-->
     <div class="background-image-about">
         
