--- a/reservations.html
+++ b/reservations.html
@@ -14,17 +14,18 @@
     <!--Header with Navigation-->
     <nav>
         <div class="brand">
-            <img src="images/logo.png"> <!--logo-->
-            <h1>Cold Turkey</h1>
+           <img src="images/logo.png"> <!--logo-->
+           <a href="index.html"><h1>Cold Turkey</h1></a>
         </div>
         <div class="nav-bar">
-            <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>Reservations</li>
-                <li>About</li>
-            </ul>
+           <ul>
+               <a href="index.html"><li>Home</li></a>
+               <a href="menu.html"><li>Menu</li></a>
+               <a href="reservations.html"><li>Reservations</li></a>
+               <a href="about.html"><li>About</li></a>
+           </ul>
         </div>
+        <a id="nav-toggle" href="#">&#9776;</a>
     </nav>
     
     <!--header-->
