--- a/reservations.html
+++ b/reservations.html
@@ -39,7 +39,7 @@
         New York, NY, 10001.<br><br>
         Contact us or make a reservation today!</p>
         </div>
-        <button type="button"><a href="#reservation">Reserve</a></button>
+        <a href="#reservation"><button type="button">Reserve</button></a>
         </div>
     </header>
 
