--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
      <link rel="stylesheet" type="text/css" href="css/style.css">
+     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Header with Navigation-->
@@ -95,30 +96,31 @@
         
     <!--Footer-->
     <footer>
-            <div class="footer-wrapper">
-            <div id="footer-container">
-            <div>
-                <a href="index.html"><img src="images/logo.png"></a>
-            </div>
-            <div class="footer-nav">
-            <ul>
-                <li><i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter-square"></i></li>
-                <li class="index"><a href="index.html">Home</a></li>
-                <li class="about"><a href="about.html">About</a></li>
-                <li class="menu"><a href="memu.html">Menu</a></li>
-                <li class="reservations"><a href="reservations.html">Reservations & Contact Us</a></li>
-            </ul>
-            </div>
-            </div>
-            <div class="address">
-            7361 High Line,<br>
-            New York, NY, 10001
-            <br>1-646-123-4567
-            </div>
-            </div>
-            <p class="copyright">Copyright &copy; Cold Turkey Drinks on the Highline 2018</p>
-        </footer>
+        <div class="footer-wrapper">
+        <div id="footer-container">
+        <div>
+            <a href="index.html"><img src="images/logo.png"></a>
+        </div>
+        <div class="footer-nav">
+        <ul>
+            <li><i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter-square"></i></li>
+            <li class="index"><a href="index.html">Home</a></li>
+            <li class="about"><a href="about.html">About</a></li>
+            <li class="menus"><a href="memu.html">Menu</a></li>
+            <li class="reservations"><a href="reservations.html">Reservations & Contact Us</a></li>
+        </ul>
+        </div>
+        
+        <div class="address">
+        7361 High Line,<br>
+        New York, NY, 10001
+        <br><br>1-646-123-4567
+        </div>
+        </div>
+        </div>
+        <p class="copyright">Copyright &copy; Cold Turkey Drinks on the Highline 2018</p>
+    </footer>
 </body>
 </html>
