Cleans up the code

--- a/reservations.html
+++ b/reservations.html
@@ -30,16 +30,18 @@
     
     <!--header-->
     <header>
-        <div class="res-h1">
-        <h1>Come and have a drink with us on the High Line.
-        </h1>
-        <div>
-        <div class="res-header-copy">
-        <p>Located at 7361 High Line, <br> 
-        New York, NY, 10001.<br><br>
-        Contact us or make a reservation today!</p>
-        </div>
-        <a href="#reservation"><button type="button">Reserve</button></a>
+        <div class="main-header-content">
+            <div class="res-h1">
+                <h1>Come and have a drink with us on the High Line.
+                </h1>
+                <div>
+                <div class="res-header-copy">
+                <p><br>Located at 7361 High Line, 
+                New York, NY, 10001.<br><br>
+                Contact us or make a reservation today!</p>
+                </div>
+                <a href="#reservation"><button type="button">Reserve</button></a>
+            </div>
         </div>
     </header>
 
